--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ go:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libnotify
+  - sudo apt-get install -y libnotify-dev
 
 script:
  - go test -v ./...
